--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
   			<p class="lead">Twitter has transformed politics more than any other technological innovation in the last twenty years.</p>
   			<p>It has democratised access to information over its short lifespan. Politicians, journalists and commentators supply a constant stream of anaylsis, opinions, witticisms and not-so witticisms. If you want to know what the 'political class' thinks you don't have to clear out a newsagents, you just log on.</p>
   			<p>You also don't have to know whether a particular journalist is influential or whether their jokes are funny: retweers, likes and follower counts do that for you.</p>
-  			<p>Over a series of weeks I have scraped around 50,000 tweets along with the information from 600 of the most important accounts on political twitter to understand the makeup of british political Twitter./p> 
+  			<p>Over a series of weeks I have scraped around 50,000 tweets along with the information from 600 of the most important accounts on political twitter to understand the makeup of British political Twitter./p> 
   			<h2> How it Works</h2>
   			<p> Investigating political twitter first requires determining which accounts qualify as part of that network. To do this, I used TweetMinster's <a href='https://twitter.com/i/lists/59678382?s=20'> Lobbby Reporter List</a> as my 'anchor' group. I then found every account which at least 20% of the Lobby Reporter list follow and also has at least 50,000 followers. On the picture above, this group of accounts is represented by the purple and green dots whilst the red dots represent 'anchor' accounts.</p>
   			<br />
@@ -65,12 +65,12 @@
 			<p> By looking at who follows who, we can see smaller political communities within the larger group of political twitter. Each colour on the map shows a different community. The size of each circle is illustrative of how many other accounts on the map follow it; the more followers from these accounts, the larger the circle. </p>
 			<h4> A closer look*</h4>
 			<h5><b>Unaffiliated</b></h5>
-			<p>These can best be thought of as a mix of journalists who don't fit into either political camps, as well as some political commentators, a few comedians and some large non-political accounts such as <a href="https://twitter.com/jk_rowling">J. K. Rowling</a>.</p>
+			<p>These can best be thought of as a mix of journalists who don't fit into either political camps, as well as some political commentators, a few comedians and some large non-political accounts such as <a href="https://twitter.com/jk_rowling">J.K. Rowling</a>.</p>
 			<p>There are a few accounts in this group that you might not expect:</p>
 			<ul>
 				<li><a href="https://twitter.com/DMiliband">David Miliband</a> is unaffiliated but <a href="https://twitter.com/Ed_Miliband">Ed Miliband</a> is firmly in the Labour community.</li>
 				<li>Quite a few Labour politicians associated with the Blairite end of of the Labour party are also in this group, rather than the Labour one, such as <a href="https://twitter.com/PCollinsTimes">Philip Collins</a>, <a href="https://twitter.com/campbellclaret">Alistair Campbell</a> and <a href="https://twitter.com/jessphillips">Jess Phillips</a>.</li>
-				<li><a href="https://twitter.com/RoryStewartUK">Rory Stewart</a> seems to follow more unaffiliated than conservative accoutns as well.</li>
+				<li><a href="https://twitter.com/RoryStewartUK">Rory Stewart</a> seems to follow more unaffiliated than conservative accounts as well.</li>
 			</ul>
 			<h5><b>Conservative Leaning</b></h5>
 			<p>This consists of mainly Conservative politicians and Conservative-leaning journalists. There are some (sort-of) unexpected accounts in this group:</p>
@@ -100,7 +100,7 @@
 			<p> There are a few problems with some of the accounts on the map above as it stands.</p>
 			<ul>
 				<li><b>A)</b> Some of these accounts have nothing to do with UK politics but are just generally large accounts such as <a href="https://twitter.com/NewYorker">The New Yorker</a>, <a href="https://twitter.com/eddieizzard">Eddie Izzard</a> and <a href="https://twitter.com/holland_tom">Tom Holland</a>. </li>
-				<li><b>B)</b> A lot of these accounts aren't really 'proper' twitter accounts as they are company accounts or in the case of accounts, such as <a href="https://twitter.com/David_Cameron">David Cameron</a> or <a href="https://twitter.com/BorisJohnson">Boris Johnson</a>, who clearly aren't 'real', in the sense that they are likely run by a team of aides, they feature very little authentic interaction with other twitter users and an awful lot of videos/photos; all the hallmarks of a managed account.</li>
+				<li><b>B)</b> A lot of these accounts aren't really 'proper' twitter accounts as they are company accounts or managed accounts, for example <a href="https://twitter.com/David_Cameron">David Cameron</a> or <a href="https://twitter.com/BorisJohnson">Boris Johnson</a>. These accounts are likely run by a team of aides, they feature very little authentic interaction with other twitter users and include awful lot of videos/photos; all the hallmarks of a managed account.</li>
 			</ul>
 			<p> To get around this, I added another condition to thin the number of accounts which was that <b>they had to follow back at least 20% of the original Anchor group.</b> This certainly isn't a perfect solution but nevertheless it produced some interesting results. </p>
 
@@ -118,11 +118,11 @@
 		<div class="col col-centred">
 			<h3> Who's in and Who's out </h3>
 			<hr />
-			<p> What's most notable about this is that even though the anchor group skews towards the 'Conservative' community  the accounts that qualify lean far more to the 'Labour' side.</p>
+			<p> What is most notable about this is that even though the anchor group skews towards the 'Conservative' community  the accounts that qualify lean far more to the 'Labour' side.</p>
 			<p> The reason for this could possibly be that Labour politicians tend to use Twitter properly whilst conservative ones don't.</p>
 			<p>Most of the politicians' accounts who don't qualify are Conservative and most of these seem to be managed accounts such as those of <a href="https://twitter.com/Jeremy_Hunt">Jeremy Hunt</a>, <a href="https://twitter.com/trussliz">Liz Truss</a> and <a href="https://twitter.com/sajidjavid">Sajid Javid</a>. Managed accoutns aren't likely to be following many people, especailly journalists, because no one is actually using the timeline of that account. 
 			</p>
-			<p> Many other accounts which certainly would count as part of political twitter have also fallen by the wayside such as <a href="https://twitter.com/Peston">Robert Peston</a>, <a href="https://twitter.com/faisalislam">Faisal Islam</a> and <a href="https://twitter.com/alexwickham">Alex Wickham</a>. This is due to the relatively arbirtrary and imperfect nature of the criteria. <p>Nevertheless, now that we have a smaller and mroe manageable group of accounts we can now do a bit more anaylsis to see who is the 'best' at twitter:</p>
+			<p> Many other accounts which certainly would count as part of political twitter have also fallen by the wayside such as <a href="https://twitter.com/Peston">Robert Peston</a>, <a href="https://twitter.com/faisalislam">Faisal Islam</a> and <a href="https://twitter.com/alexwickham">Alex Wickham</a>. This is due to the relatively arbirtrary and imperfect nature of the criteria. <p>Nevertheless, now that we have a smaller and more manageable group of accounts we can now do a bit more anaylsis to see who is the 'best' at twitter:</p>
 			<br />
 			<br />
 			<br />
@@ -148,8 +148,8 @@
 			<hr />
 			<ul>
 				<li><b>Engagement</b>: The total likes, comments and retweets divided by followers. The higher the value demontsrates the most imporant attribute of a twitter account: that people are noticing and engaging with its tweets.</li>
-				<li><b>Likeability</b>: On twitter being 'ratiod' means to have more replies than likes on a tweet. It's the best indication there is that a tweet is unpopular. On this graph the average 'ratiod' value is for a person's tweets is represented as their Libeability rating.</li>
-				<li><b>Reach:</b> This is represented by the size of each circle on the graph. It takes average retweets and follower total in to account to give an accurate appraisal of the average 'reach' of a tweet from an account. The larger the circle the more people the account reaches on average with each tweet.</li> 
+				<li><b>Likeability</b>: On twitter being 'ratiod' means to have more replies than likes on a tweet. It's the best indication there is that a tweet is unpopular. On this graph the average 'ratiod' value is for a person's tweets is represented as their Likeability rating.</li>
+				<li><b>Reach:</b> This is represented by the size of each circle on the graph. It takes average retweets and follower total into account to give an accurate appraisal of the average 'reach' of a tweet from an account. The larger the circle the more people the account reaches on average with each tweet.</li> 
 				<li><b>Follower Count</b>: The number of followers each account has. </li>
 				<li><b>Mentions:</b> The number of times an account is mentioned by other accounts in the group.</li>
 				<li><b>List Count</b>: The number of lists an account is a member of which is a good indicator of how much the output of an account is valued by others.</li>
@@ -158,42 +158,42 @@
 			</ul>
 			<br />
 			<h2>Takeaways</h2>
-			<p>Two groups dominate political twitter in terms of engagement and reach and likely won't come as much of a surprise to many that they are socialist twitter and pro-brexit twitter. The politicians and activiists who represent these groups are consistantly amongst the most engaging and popular on twitter.</p>
+			<p>Two groups dominate political twitter in terms of engagement and reach, it likely won't come as much of a surprise to many that they are socialist twitter and pro-Brexit twitter. The politicians and activiists who represent these groups are consistantly amongst the most engaging and popular on twitter.</p>
 			<hr />
 			<h3>Politicians</h3>
 			<h4>Labour</h4>
 			<h5><b><a href="https://twitter.com/jeremycorbyn">Jeremy Corbyn</a></b> </h5>
-			<p>Intuitively you would expect their to be an inverse relationship between engagement and followers, generally that does hold true, but it doesn't apply to <a href="https://twitter.com/jeremycorbyn">Jeremy Corbyn</a>. He has one of the largest, most engaging and likeable accounts of all of the ones covered and is an outlier compared to other accounts of similiar size.</p>
+			<p>Intuitively you would expect there to be an inverse relationship between engagement and followers. Generally that does hold true, but it doesn't apply to <a href="https://twitter.com/jeremycorbyn">Jeremy Corbyn</a>. He has one of the largest, most engaging and likeable accounts of all of the ones covered and is an outlier compared to other accounts of similiar size.</p>
 			<h5> <b><a href="https://twitter.com/LauraPidcock">Laura Pidcock</a> and <a href="https://twitter.com/IanLaveryMP">Ian Lavery</a></b> </h5>
 			<p>Two other influential socialists, <a href="https://twitter.com/LauraPidcock">Laura Pidcock</a> and <a href="https://twitter.com/IanLaveryMP">Ian Lavery</a> also have excellent excellent engagement for politicians.</p>
-			<p>This demonstrates just how active the socialist left is on twitter, especially when compared to the right of the Labour party and the Conservative party. 
+			<p>This demonstrates just how active the socialist left is on Twitter, especially when compared to the right of the Labour party and the Conservative party. 
 			<h4> The Bad Boys of Brexit </h4>
 			<h5> <b><a href="https://twitter.com/TiceRichard">Richard Tice</a>, <a href="https://twitter.com/johnredwood">John Redwood</a> and <a href="https://twitter.com/Michael_Heaver">Michael Heaver</a> (in that order)</b></h5>
 			<p> One area of the right which does have a large presence on Twitter is the Brexit supporters.</p>
 			<p>All of these accounts have both excellent engagement and likeability raitings, especially <a href="https://twitter.com/TiceRichard">Richard Tice</a> who has the second highest engagement rating of any account here.</p>
 			<h4>#FPBE</h4>
 			<h5><b><a href="https://twitter.com/gavinesler">Gavin Esler</a></b></h5>
-			<p>The one time Change UK candidate and BBC presenter seems to be quite good at twitter, but he is the only politician here representing the FPBE crowd.</p>
+			<p>The one time Change UK candidate and BBC presenter seems to be quite good at Twitter, but he is the only politician here representing the FPBE crowd.</p>
 			<h4>Conservatives</h4>
 			<h5> <b><a href="https://twitter.com/JamesCleverly">James Cleverly</a></b></h5>
-			<p><a href="https://twitter.com/JamesCleverly">James Cleverly</a> has the second most engaging twitter account of any Conservative MP tested here and for an establishment politician rather than an overt Brexiteer such as <a href="https://twitter.com/johnredwood">ohn Redwood</a> that is quite a feat.</p>
-			<p>This does show what I think most people already intuitively know to be true. Managed Twitter accounts really don't work very well as people can when they aren't seeing an authentic voice</p>
+			<p><a href="https://twitter.com/JamesCleverly">James Cleverly</a> has the second most engaging Twitter account of any Conservative MP tested here and for an establishment politician rather than an overt Brexiteer such as <a href="https://twitter.com/johnredwood">John Redwood</a> that is quite a feat.</p>
+			<p>This does show what I think most people already intuitively know to be true. Managed Twitter accounts really don't work very well as people quickly recognise when they aren't seeing an authentic voice.</p>
 			<hr />
 			<h3>Journalists</h3>
 			<h5> <b><a href="https://twitter.com/carolecadwalla">Carole Cadwalladr</a></b></h5>
-			<p>Love her or hate her. <a href="https://twitter.com/carolecadwalla">Carole Cadwalladr</a>has an excellent presence on twitter. Carole also has one of the highest engagement ratings of any journalists as well as the highest likeability rating of any journalist.</p>
+			<p>Love her or hate her. <a href="https://twitter.com/carolecadwalla">Carole Cadwalladr</a>has an excellent presence on Twitter. Carole also has one of the highest engagement ratings of any journalist as well as the highest likeability rating of any journalist.</p>
 			<h5><b><a href="https://twitter.com/tconnellyRTE">Tony Connelly</a></b></h5>
-			<p><a href="https://twitter.com/tconnellyRTE">Tony Connelly</a> of RTE also has one of the highest likeability ratings of any journalists, only surparrsed by <a href="https://twitter.com/carolecadwalla">Carole Cadwalladr</a>. </p>
+			<p><a href="https://twitter.com/tconnellyRTE">Tony Connelly</a> of RTE also has one of the highest likeability ratings of any journalist, only surpassed by <a href="https://twitter.com/carolecadwalla">Carole Cadwalladr</a>. </p>
 			<h5> <b><a href="https://twitter.com/sunny_hundal">Sunny Hundal</a></b> </h5>
 			<p> Whilst it isn't easy to see on the graph, <a href="https://twitter.com/sunny_hundal">Sunny Hundal</a> is the only journalist to get a likeability raiting below 1, meaning on avergae he gets more replies than likes on his tweets</p>
 			<h5> <b><a href="https://twitter.com/Robert___Harris">Robert Harris</a></b> </h5>
-			<p> He has the highest engagement of any journalists here, but that might be because by sampling 200 tweets instead of a timerange of tweets it gives unfair advantage to those such as Harris whose 200 tweets span the course of one year(as opposed to 2 months for <a href="https://twitter.com/jeremycorbyn">Jeremy Corbyn</a>).</p>
+			<p> He has the highest engagement of any journalists here, but that might be because by sampling 200 tweets instead of a time range of tweets it gives unfair advantage to those such as Harris whose 200 tweets span the course of one year(as opposed to 2 months for <a href="https://twitter.com/jeremycorbyn">Jeremy Corbyn</a>).</p>
 			<h5><b><a href="https://twitter.com/huwbbc">Huw Edwards</a></b> </h5>
 			<p> The BBC News presenter is the only BBC journalist to feature prominently on engagement and likeability here, with substantial levels of both.</p>
 			<hr />
 			<h3> Honourable Mentions </h3>
 			<h5> <b><a href="https://twitter.com/C4Dispatches">C4 Dispatches</a></b></h5>
-			<p> Official accounts usually don't engage many people on Twitter. However, <a href="https://twitter.com/C4Dispatches">Channel 4 Dispatches</a> not only does far better than any official account, its one of the best of the accounts surveyed.</p>
+			<p> Official accounts usually don't engage many people on Twitter. However, <a href="https://twitter.com/C4Dispatches">Channel 4 Dispatches</a> not only does far better than any official account, it is one of the best of the accounts surveyed.</p>
 			<br />
 			<br />
 			<br />
@@ -240,7 +240,7 @@
  			</div>
  			<br />
  			<br />
- 			<p> The results of the hashtag findings are not particulalry notable. It's not surprising that political twitter skews towards labour but it is interesting to see how close some of these contrasting hashtags were.</p>
+ 			<p> The results of the hashtag findings are not particularly notable. It's not surprising that political Twitter skews towards labour but it is interesting to see how close some of these contrasting hashtags were.</p>
  			<hr />
  				<blockquote class="twitter-tweet tw-align-center text-center"><p lang="en" dir="ltr">The Stoic saw Twitter coming from a couple of millennia off. <a href="https://t.co/IJmlZJRWF1">https://t.co/IJmlZJRWF1</a></p>&mdash; Aditya Chakrabortty (@chakrabortty) <a href="https://twitter.com/chakrabortty/status/1222093093115219968?ref_src=twsrc%5Etfw">January 28, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
  				<br /> 
@@ -252,10 +252,10 @@
  	<div class="row col-centred">
 
  		<div class="col-sm-6">
- 			<p> I'm a third year History student at Durham University. I'm about to graduate and next year I will be studying a Masters in Interactive Journalism at City University. I'm interested in data journalism and the purpose of this project was to develop my understanding of network-anaylsis, Machine Learning and Python graphing libraries . </p>
- 			<p> If you are interested in finding out more, the code for the entire project is available on GitHub.</p>
+ 			<p> I'm a third year History student at Durham University. I'm about to graduate and next year I will be studying a Masters in Interactive Journalism at City University. I'm interested in data journalism and the purpose of this project was to develop my understanding of network-anaylsis, Machine Learning and Python graphing libraries. </p>
+ 			<p> If you are interested in finding out more, the code for the entire project is available on <a href="https://github.com/tomsaunders98/TwitterChexit/">GitHub</a>.</p>
  			<ul>
- 				<li>Explore the code on Github</li>
+ 				<li>Explore the code on <a href="https://github.com/tomsaunders98/TwitterChexit/">Github</a></li>
  				<li>Follow me on <a href="https://twitter.com/tomandthenews">Twitter</a> </li>
  				<li>Connect on <a href="https://www.linkedin.com/in/tomsaunders98/">LinkedIn</a></li>
  			</ul>
