Added Stopword File

--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
   			<p class="lead">Twitter has transformed politics more than any other technological innovation in the last twenty years.</p>
   			<p>It has democratised access to information over its short lifespan. Politicians, journalists and commentators supply a constant stream of anaylsis, opinions, witticisms and not-so witticisms. If you want to know what the 'political class' thinks you don't have to clear out a newsagents, you just log on.</p>
   			<p>You also don't have to know whether a particular journalist is influential or whether their jokes are funny: retweers, likes and follower counts do that for you.</p>
-  			<p>Over a series of weeks I have scraped around 50,000 tweets along with the information from 600 of the most important accounts on political twitter to understand the makeup of British political Twitter./p> 
+  			<p>Over a series of weeks I have scraped around 50,000 tweets along with the information from 600 of the most important accounts on political twitter to understand the makeup of British political Twitter. </p> 
   			<h2> How it Works</h2>
   			<p> Investigating political twitter first requires determining which accounts qualify as part of that network. To do this, I used TweetMinster's <a href='https://twitter.com/i/lists/59678382?s=20'> Lobbby Reporter List</a> as my 'anchor' group. I then found every account which at least 20% of the Lobby Reporter list follow and also has at least 50,000 followers. On the picture above, this group of accounts is represented by the purple and green dots whilst the red dots represent 'anchor' accounts.</p>
   			<br />
@@ -245,7 +245,7 @@
  				<blockquote class="twitter-tweet tw-align-center text-center"><p lang="en" dir="ltr">The Stoic saw Twitter coming from a couple of millennia off. <a href="https://t.co/IJmlZJRWF1">https://t.co/IJmlZJRWF1</a></p>&mdash; Aditya Chakrabortty (@chakrabortty) <a href="https://twitter.com/chakrabortty/status/1222093093115219968?ref_src=twsrc%5Etfw">January 28, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
  				<br /> 
  				<br />
- 				<h1>Conclusion</h1>
+ 				<h1>About Me</h1>
  				<hr />
  		</div>
  	</div>
